# Kotori

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  ccache.sh  cmake_install.cmake  cross-riscv.cmake  linker.ld  main.cpp  run.sh  rv64bindump.sh  startup.S
A9-K/: .gitignore
A9-K/src/kernel/: CMakeLists.txt  arm-gcc-toolchain.cmake  irq.c  irq.h  kernel.c  linker.ld
A9-K/src/kernel/arch/arm/: registers.h  start.s
A9-K/src/kernel/arch/arm/gic/: 1_0_0.c  1_0_0.h
A9-K/src/kernel/dri/: dri_gendef.h
A9-K/src/kernel/dri/serial/: apicalls.h  serial.c  serial.h
A9-K/src/kernel/dri/serial/uart/: pl011.c  pl011.h
A9-K/src/kernel/dri/video/pl111/: init.c  init.h  pl111.c  pl111.h
A9-K/src/kernel/utils/: gendef.h  io.c  io.h  mem.h
arch/: Makefile  abstract.hpp  cmake_install.cmake  tardef.hpp  types.hpp
arch/riscv/: CMakeLists.txt  Makefile  cmake_install.cmake  madoka.h  memory.hpp  proc.cpp  proc.hpp  regs.hpp  trap.h  weeb.hpp
arch/riscv/dri/: Makefile  cmake_install.cmake
arch/riscv/dri/console/: CMakeLists.txt  Makefile  cmake_install.cmake
arch/riscv/dri/console/spike/: CMakeLists.txt  Makefile  cmake_install.cmake  htif.cpp  htif.hpp
arch/riscv/int/: CMakeLists.txt  Makefile  cmake_install.cmake  inte.cpp  inte.hpp
arch/riscv/kernel/: CMakeLists.txt  Makefile  cmake_install.cmake  pcb.cpp  pcb.hpp  tcb.cpp  tcb.hpp
arch/riscv/security/: priv.hpp
arch/riscv/sifive/: CMakeLists.txt  Makefile  cmake_install.cmake  serial.cpp  serial.hpp
arch/riscv/timer/: CMakeLists.txt  Makefile  cmake_install.cmake  rtc.cpp  rtc.hpp
arch/riscv/vm/: vm.hpp
helpers/: kdef.hpp
kernel/: CMakeLists.txt  Makefile  cmake_install.cmake  errors.hpp  sync.hpp  utility.cpp  utility.hpp
kernel/chardev/: CMakeLists.txt  Makefile  cmake_install.cmake  uart.cpp  uart.hpp
kernel/timer/: rtc.hpp
ktl/: array.hpp  bit.hpp  memory.hpp  utility.hpp
ktl/list/: node.hpp  single.hpp
term/: colors.hpp
tmp/: a.S
